--- a/ch09/websockets_hijack.html
+++ b/ch09/websockets_hijack.html
@@ -2,6 +2,10 @@
     - Assumes DVGA runs on localhost port 5013
     - Assumes netcat runs on localhost port 4444
 -->
+<html>
+  <h1>WebSockets Hijacking and GraphQL Subscription Response Exfiltration Demo</h1>
+</html>
+
 <script>
     const GQL = {
       CONNECTION_INIT: 'connection_init',
